# rust-mpi-string-comparing

./: Cargo.toml  Dockerfile  config.toml  test.bat
src/: main.rs
