[package]
name = "same_string_searcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []
[dependencies]
clap = {version = "4.4.11", features = ["derive"]}
mpi = { version = "0.7.0", features = ["user-operations", "derive"] }
rand = "0.8.5"
rng = "0.1.0"
